<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sapi_kuda_dan_kerbau_pedia"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="29sp"
        android:layout_marginBottom="32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/btn_buka_ras_sapi"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/sapi1"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_ras_kuda"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:src="@drawable/kuda_arab"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_ras_kerbau"
            android:src="@drawable/kerbau_rawa"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_tentang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Small"
        android:text="@string/tentang"
        android:layout_margin="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifikasi"
        android:textStyle="italic"
        android:layout_marginBottom="32dp"
        />


</LinearLayout>